style.css
@import url("https://fonts.googleapis.com/css2?family=Climate+Crisis:YEAR@1979&family=Vend+Sans:ital,wght@0,300..700;1,300..700&display=swap");

/* theme */

:root {
  --background: rgb(24, 25, 29);
  --card: rgb(33, 34, 38);
  --seperator: rgb(76, 77, 82);
  --online: rgb(0, 255, 64);
  --idle: rgb(255, 202, 0);
  --dnd: rgb(255, 26, 59);
  --text: rgb(255, 255, 255);
  --padding: 30px;
  --margin: 20px;
  --border-radius: 50px;
}

/* animations */

@keyframes spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@keyframes bounce {
  0%,
  80%,
  100% {
    transform: translateY(0);
    animation-timing-function: cubic-bezier(0, 0, 0, 0.75);
  }

  10% {
    transform: translateY(5px) scaleY(0.8) scaleX(1.2);
    animation-timing-function: cubic-bezier(0, 0, 0, 0.75);
  }

  30% {
    transform: translateY(-30px) scaleY(1.1) scaleX(0.8);
    animation-timing-function: cubic-bezier(0.75, 0, 1, 1);
  }

  50% {
    transform: translateY(4px) scaleY(0.9) scaleX(1.1);
    animation-timing-function: cubic-bezier(0, 0, 0, 0.75);
  }

  70% {
    transform: translateY(-6px) scaleX(0.95);
    animation-timing-function: cubic-bezier(0.75, 0, 1, 1);
  }

  90% {
    transform: translateY(-2px);
    animation-timing-function: cubic-bezier(0.75, 0, 1, 1);
  }
}

@keyframes background {
  from {
    background-position: 0 0;
  }
  to {
    background-position: 140px 100px;
  }
}

/* body */

body {
  margin: 0;
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
  font-family: "Vend Sans";
  color: var(--text);
  background: var(--background);
  background-image: url("img/tile.svg");
  background-size: 140px 100px;
  animation: background 2.5s linear infinite;
}

/* card */

.card {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  gap: var(--margin);
  padding: var(--padding);
  border-radius: var(--border-radius);
  background: var(--card);
}

.card p,
.card h2 {
  margin: 0;
}

/* headings */

.card .title h1 {
  margin: 0;
  font-size: 60px;
  font-family: "Climate Crisis";
  font-weight: 400;
}

.card .title h1 span {
  display: inline-block;
}

.card .title h1 span.animate {
  animation: bounce 0.9s;
}

/* title */

.card .title {
  display: flex;
  align-items: center;
}

/* pfp */

.pfp {
  position: relative;
}

.pfp img {
  height: 100px;
  margin-right: 20px;
  border-radius: 50%;
}

.pfp img.animate {
  animation: spin 0.9s cubic-bezier(0.2, 0.2, 0, 1.15);
}

/* status */

.status {
  position: absolute;
  bottom: 5%;
  right: 20%;
  width: 25px;
  height: 25px;
  border-radius: 50%;
  border: 4px solid #fff;
  display: none;
}

.status.online,
.status.idle,
.status.dnd {
  display: block;
}

.status.online {
  background: var(--online);
}

.status.idle {
  background: var(--idle);
}

.status.dnd {
  background: var(--dnd);
}

/* seperator */

.card hr {
  width: 100%;
  margin: 0;
  border-style: dashed;
  color: var(--seperator);
}

/* socials */

.card .socials {
  width: 100%;
  display: flex;
  justify-content: center;
  gap: var(--margin);
}

.card .socials button.icon {
  width: 60px;
  height: 60px;
  border: 0;
  border-radius: 50%;
  color: white;
  font-size: 30px;
  transition: transform 0.5s cubic-bezier(0.35, 0.55, 0, 0.9),
    margin 0.7s cubic-bezier(0.25, 0.7, 0, 1.5);
}

.card .socials button.fa-youtube {
  background: rgb(255, 0, 51);
}

.card .socials button.fa-discord {
  background: rgb(88, 101, 242);
}

.card .socials button.fa-twitter {
  background: rgb(29, 155, 240);
}

.card .socials button:hover {
  transform: scale(1.25);
  margin: 0 var(--margin);
}

/* sub count */

.card .subCount {
  height: 60px;
  display: flex;
  align-items: center;
  gap: var(--margin);
  padding: 5px;
  border-radius: var(--border-radius);
  background: var(--background);
}

.card .subCount h1 {
  margin: 0;
  font-size: 33px;
  padding-right: var(--margin);
}

.card .subCount img {
  display: none;
  width: 60px;
  height: 60px;
  border-radius: 50%;
}

.card .subCount #subCounter {
  display: none;
}

.card .subCount .spinner {
  font-size: 30px;
  animation: spin 1s linear infinite;
}

/* footer */

.lastUpdated {
  position: absolute;
  bottom: 0;
  left: 0;
  margin: 0 0 var(--margin) var(--margin);
  font-style: italic;
  color: var(--seperator);
}

